@@ -1,3 +1,7 @@
+2009-05-29  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>
+
+	* src/pcmanx_gtk2.cpp: Add an introduction mainpage of Doxygen.
+
 2009-05-29  Jim Huang  <jserv@0xlab.org>
 
 	* src/view/telnetview.cpp (CTelnetView::OnHyperlinkClicked): Fix gcc
